--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -11,11 +11,24 @@
   "author": "MMalpassi",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
+    "cors": "2.8.5",
+    "dotenv": "^17.2.0",
     "express": "5.1.0",
-    "morgan": "^1.10.0"
+    "mongodb": "^6.17.0",
+    "mongoose": "^8.16.3",
+    "morgan": "1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "@eslint/js": "9.31.0",
+    "eslint": "^9.31.0",
+    "globals": "^16.3.0",
+    "nodemon": "3.1.10",
+    "standard": "17.1.2"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/standard/eslintrc.json",
+    "rules": {
+      "import/no-absolute-path": "off"
+    }
   }
 }
