--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "MMalpassi",
@@ -19,7 +20,8 @@
     "morgan": "1.10.0"
   },
   "devDependencies": {
-    "@eslint/js": "9.31.0",
+    "@eslint/js": "^9.31.0",
+    "@stylistic/eslint-plugin-js": "^4.4.1",
     "eslint": "^9.31.0",
     "globals": "^16.3.0",
     "nodemon": "3.1.10",
