--- a/part4/blogs/package.json
+++ b/part4/blogs/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "node --test"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env  NODE_ENV=test node --test"
   },
   "author": "MMalpassi",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "3.1.10"
+    "cross-env": "^7.0.3",
+    "nodemon": "3.1.10",
+    "supertest": "^7.1.4"
   },
   "dependencies": {
     "cors": "^2.8.5",
