--- a/part4/blogs/package.json
+++ b/part4/blogs/package.json
@@ -11,15 +11,16 @@
   "author": "MMalpassi",
   "license": "ISC",
   "devDependencies": {
-    "cross-env": "^7.0.3",
+    "cross-env": "7.0.3",
     "nodemon": "3.1.10",
-    "supertest": "^7.1.4"
+    "supertest": "7.1.4"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
-    "express": "^5.1.0",
-    "lodash": "^4.17.21",
-    "mongoose": "^8.16.4"
+    "bcrypt": "6.0.0",
+    "cors": "2.8.5",
+    "dotenv": "17.2.0",
+    "express": "5.1.0",
+    "lodash": "4.17.21",
+    "mongoose": "8.16.4"
   }
 }
